config/kubernetes/alluxio_ui_forward.yml
apiVersion: v1
kind: Service
metadata:
  name: expose-alluxio-ui
  namespace: alluxio
spec:
  type: NodePort
  selector:
    app: alluxio
  ports:
      # By default and for convenience, the `targetPort` is set to the same value as the `port` field.
    - port: 19999
      targetPort: 19999
      # Optional field
      # By default and for convenience, the Kubernetes control plane will allocate a port from a range (default: 30000-32767)
      nodePort: 31999

---

apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: alluxio-ingress
  namespace: alluxio
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: alluxio.jhub.be
   http:
     paths:
     - path: /
       backend:
         serviceName: alluxio-master-0
         servicePort: 19999
