config/kubernetes/ugent_ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ugent-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 rules:
 - host: jhub.be
   http:
     paths:
     - path: /minio
       backend:
         serviceName: minio
         servicePort: 32000
